--- a/index.html
+++ b/index.html
@@ -1,25 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ========== -->
-     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- ========= -->
-     <link rel="shortcut icon" href="Assets/Images/favicon/shoe-shop.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Assets/Images/favicon/shoe-shop.png" type="image/x-icon">
 
     <!-- ========= -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-      
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
+
     <!-- ========= -->
     <title>Shoe-Shop : Home</title>
 
 </head>
+
 <body>
-    
+    <!-- ============ -->
+    <section id="header">
+        <nav>
+            <h2>
+                <a href="#">Shoe-Shop</a>
+            </h2>
+
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="men.html">men</a></li>
+                <li><a href="women.html">women</a></li>
+                <li><a href="kids.html">kids</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="contact.html">contact</a></li>
+            </ul>
+
+        </nav>
+    </section>
+
+    <!-- ============ -->
+    <section id="hero">
+
+    </section>
+
+    <!-- ============ -->
+    <section id="banner">
+
+    </section>
+
+    <!-- ============ -->
+    <section id="products-showcase">
+
+    </section>
+
+    <!-- ============ -->
+    <section id="trusty-parters">
+
+    </section>
+
+    <!-- ============ -->
+    <section id="news-letter">
+
+    </section>
+
+    <!-- ============ -->
+    <section id="contactus">
+
+    </section>
+
 </body>
+
 </html>
