--- a/web/index.html
+++ b/web/index.html
@@ -24,8 +24,9 @@
 
 <body>
     <!-- ============ -->
-    <section id="header">
+    <section id="header" class="section-p1">
         <nav>
+            
             <h2>
                 <a href="#">Shoe-Shop</a>
             </h2>
@@ -43,32 +44,32 @@
     </section>
 
     <!-- ============ -->
-    <section id="hero">
+    <section id="hero" class="section-p1">
 
     </section>
 
     <!-- ============ -->
-    <section id="banner">
+    <section id="banner" class="section-p1">
 
     </section>
 
     <!-- ============ -->
-    <section id="products-showcase">
+    <section id="products-showcase" class="section-p1">
 
     </section>
 
     <!-- ============ -->
-    <section id="trusty-parters">
+    <section id="trusty-parters" class="section-p1">
 
     </section>
 
     <!-- ============ -->
-    <section id="news-letter">
+    <section id="news-letter" class="section-p1">
 
     </section>
 
     <!-- ============ -->
-    <section id="contactus">
+    <section id="contactus" class="section-p1">
 
     </section>
 
