--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
     <link rel="shortcut icon" href="Assets/Images/favicon/shoe-shop.png" type="image/x-icon">
 
     <!-- ========= -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
-        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
 
-    <!-- ========= -->
     <title>Shoe-Shop : Home</title>
 
 </head>
@@ -25,14 +21,22 @@
 <body>
     <!-- ============ -->
     <section id="header" class="section-p1">
-        <nav>
-            
+        <div class="nav-search">
             <h2>
-                <a href="#">Shoe-Shop</a>
+                <a href="#">Footware</a>
             </h2>
 
+            <form>
+                <input type="search" placeholder="Search here...">
+                <i class="ri-search-line"></i>
+            </form>
+
+        </div>
+           
+
+            <nav>
             <ul>
-                <li><a href="index.html">home</a></li>
+                <li><a href="index.html" class="active">home</a></li>
                 <li><a href="men.html">men</a></li>
                 <li><a href="women.html">women</a></li>
                 <li><a href="kids.html">kids</a></li>
