Added images and made changes

--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
 <body>
     <!-- ============ -->
     <section id="header" class="section-p1">
+        
         <div class="nav-search">
-            <h2>
+            <h3>
                 <a href="#">Footware</a>
-            </h2>
+            </h3>
 
             <form>
                 <input type="search" placeholder="Search here...">
-                <i class="ri-search-line"></i>
+                <i class="ri-search-line normal"></i>
             </form>
 
         </div>
-           
 
-            <nav>
+        <nav>
             <ul>
                 <li><a href="index.html" class="active">home</a></li>
                 <li><a href="men.html">men</a></li>
@@ -43,10 +43,14 @@
                 <li><a href="about.html">about</a></li>
                 <li><a href="contact.html">contact</a></li>
             </ul>
-
         </nav>
-    </section>
 
+    </section>
+    <div class="slide-banner">
+        <h3>
+            <a>Almost 25% off on everything! just apply the coupone code</a>
+        </h3>
+    </div>
     <!-- ============ -->
     <section id="hero" class="section-p1">
 
