--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ========== -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- ========= -->
-    <link rel="shortcut icon" href="Images/favicon/shoe-shop.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Assets/Images/favicon/shoe-shop.png" type="image/x-icon">
 
     <!-- ========= -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
@@ -21,7 +21,7 @@
 <body>
     <!-- ============ -->
     <section id="header" class="section-p1">
-        
+
         <div class="nav-search">
             <h3>
                 <a href="#">Footware</a>
@@ -51,15 +51,74 @@
             <a>Almost 25% off on everything! just apply the coupone code</a>
         </h3>
     </div>
-    
+
     <!-- ============ -->
-    <section id="hero" class="section-p1">
+    <section id="hero">
+
+        <div class="background-slider">
+
+            <div class="slide" id="slide-1">
+
+                <div class="inner-text">
+
+                    <h1>
+                        men's shoes collection
+                    </h1>
+
+                    <h3>New trending shoes </h3>
+                    <br>
+                    <button class="normal" id="btn-collect">
+                        Shop Collection
+                    </button>
+
+                </div>
+
+            </div>
+
+            <div class="slide" id="slide-2">
+                <div class="inner-text">
+
+                    HUGE
+                    SALE
+                    50%
+                    OFF
+                    Big sale sandals
+
+                    <button class="normal" id="btn-collect">
+                        Shop Collection
+                    </button>
+
+                </div>
+            </div>
+
+            <div class="slide" id="slide-3">
+
+                <div class="inner-text">
+
+                    NEW
+                    ARRIVAL
+
+                    UP TO 30% OFF
+                    New stylish shoes for men
+
+
+                    <button class="normal" id="btn-collect">
+                        Shop Collection
+                    </button>
+
+                </div>
+
+            </div>
+
+        </div>
 
     </section>
 
     <!-- ============ -->
     <section id="banner" class="section-p1">
-
+        <h1>
+            It started with a simple idea: Create quality, well-designed products that I wanted myself.
+        </h1>
     </section>
 
     <!-- ============ -->
@@ -81,6 +140,13 @@
     <section id="contactus" class="section-p1">
 
     </section>
+
+
+
+
+    <!-- ============ -->
+    <script src="script/script.js"></script>
+
 
 </body>
 
