--- a/index.html
+++ b/index.html
@@ -57,58 +57,11 @@
 
         <div class="background-slider">
 
-            <div class="slide" id="slide-1">
+            <div class="slide" id="slide-1"> </div>
 
-                <div class="inner-text">
+            <div class="slide" id="slide-2"></div>
 
-                    <h1>
-                        men's shoes collection
-                    </h1>
-
-                    <h3>New trending shoes </h3>
-                    <br>
-                    <button class="normal" id="btn-collect">
-                        Shop Collection
-                    </button>
-
-                </div>
-
-            </div>
-
-            <div class="slide" id="slide-2">
-                <div class="inner-text">
-
-                    HUGE
-                    SALE
-                    50%
-                    OFF
-                    Big sale sandals
-
-                    <button class="normal" id="btn-collect">
-                        Shop Collection
-                    </button>
-
-                </div>
-            </div>
-
-            <div class="slide" id="slide-3">
-
-                <div class="inner-text">
-
-                    NEW
-                    ARRIVAL
-
-                    UP TO 30% OFF
-                    New stylish shoes for men
-
-
-                    <button class="normal" id="btn-collect">
-                        Shop Collection
-                    </button>
-
-                </div>
-
-            </div>
+            <div class="slide" id="slide-3"></div>
 
         </div>
 
